# ghost-ml

./: .gitmodules  build.sh  run.sh  setup_venv.sh
ghost_annotation/: CMakeLists.txt  package.xml
ghost_annotation/config/: launch.json
ghost_annotation/config/actions/: annotator.json  img_annotator.json  pc_annotator.json
ghost_annotation/config/presets/: annotation.json
ghost_annotation/launch/: annotation.launch.py
ghost_annotation/ref/: pc2img.ts
ghost_annotation/src/: annotator_node.py  artifact_model.py  build_dataset.py  calibrate_layers.py  changes.txt  grid_utils.py  img_annotator_node.py  joy_state.py  pc_annotator_node.py  test_grid_utils.py  train.py
ghost_buster/: CMakeLists.txt  package.xml
ghost_buster/include/util/: cloud_ops.hpp
ghost_buster/src/: main.cpp
ghost_tester/: CMakeLists.txt  package.xml
ghost_tester/include/util/: cloud_ops.hpp  ros_utils.hpp
ghost_tester/src/: main.cpp
