<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ghost_annotation</name>
  <version>1.0.0</version>
  <description>Annotation workflow for ghost point detection project</description>
  <maintainer email="samrichter888@gmail.com">Sam Richter</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>foxglove_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>rosbag2</depend>
  <depend>joy</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>