<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ghost_buster</name>
  <version>0.0.0</version>
  <description>R/D</description>
  <maintainer email="samrichter888@gmail.com">Sam</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>eigen</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
